# polaris

./: .gitignore  LICENSE  Makefile  README.md  requirements.txt
backend/: Cargo.toml
backend/api/: Cargo.toml
backend/api/migrations/: 20260101000000_create_clusters.sql
backend/api/proto/: cluster.proto
backend/api/src/: main.rs
backend/cli/: Cargo.toml
backend/cli/src/: main.rs
backend/core/: Cargo.toml
backend/core/src/: k8s.rs  lib.rs  strimzi.rs  workflow.rs
docs/: design-doc.md  implementation-plan.md  polaris-ui-design.md  self-hosted-kafka-infra.md  walkthrough-branding-placeholders.md  walkthrough-phase-1.md  walkthrough-phase-2.md  walkthrough-test-containers.md  walkthrough-ui-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ComingSoon.jsx
frontend/src/layouts/: MainLayout.jsx
frontend/src/pages/: ClusterList.jsx  Dashboard.jsx
scripts/: dev_env.py
