[workspace]
members = [
    "core",
    "api",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Polaris Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
kube = { version = "0.90", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
schemars = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
